--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>Agenda Telefônica</h1>
         <div id="input-infos">
             <Input type="text" id="input-nomeCompleto" name="input-nomeCompleto" class="input" placeholder="Nome Completo">
-            <Input type="text" id="input-telFixo" name="input-telFixo" class="input" placeholder="Telefone Fixo" maxlength="11">
-            <Input type="text" id="input-telCelular" name="input-telCelular" class="input" placeholder="Telefone Celular" maxlength="11">
+            <Input type="text" id="input-telFixo" name="input-telFixo" class="input" placeholder="Telefone Fixo">
+            <Input type="text" id="input-telCelular" name="input-telCelular" class="input" placeholder="Telefone Celular">
             <Input type="text" id="input-imgLink" name="input-imgLink" class="input" placeholder="URL da Foto">
             <Input type="date" id="input-data" name="input-data" class="input">
             <Input type="email" id="input-email" name="input-email" class="input" placeholder="E-mail">
@@ -24,15 +24,15 @@
             <Input type="text" id="input-instagram" name="input-instagram" class="input" placeholder="@Instagram">
             <Input type="text" id="input-github" name="input-github" class="input" placeholder="@Github">
 
-                <button id="botao-add" onclick="registrarPessoa()">Adicionar Contato</button>
+                <button id="botao-add" onclick="bibliotecaPessoas.renderizarConteudo()">Adicionar Contato</button>
         </div>
     </div>
 
     <div id="msg"></div>
 
     <div id="div-vazia" class="hidden">
-        <div id="containerAgenda">
-
+        <div id="containerLista">
+            
         </div>
     </div>
 </body>
